Refactor to maintain digraph state at all times
Also allows <C-K> and <C-V>/<C-Q> to be remapped